Switched to Java 11